assets/css/style.css
*{
    box-sizing: border-box;
}

.my-links{
    height: 100px;
}
.my-links ul {
    background-color: red;
    padding-right: 40px;
    margin: 0;
    height: 100%;
}

.my-links li {
    background-color: black;

}

.hero {
    height: 300px;
    width: 100%;
    margin: 0;
    background: blue;
}

main {
    display: flex;
    flex-flow: column;

}

section {
    display: flex;
    flex-direction: column;
    border: 10px solid black;
}

/* in this class, "Carlos Dela Cruz PROJECTS" will slide from right to left.
the gap in between each span is 40px.
When screen resolution decreases, the overflow will be hidden, and will not wrap to the next line.

 */
.border-text {
    display: flex;
    gap: 40px;
    height: 50px;
    border: 2px solid blue;
    background-color: lightgray;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    white-space: nowrap;
}

.works {
    height: 140px;
    overflow: hidden;
    border-bottom: 1px solid #e4e4e4;
    background-color: bisque;
    position: relative;
    margin-top: 10px;
    margin-bottom: 10px;
    display: flex;
}
/* 
sets the dimensions to the same size as its parent so that
when the whole box is clicked, it will redirect to the link */
.works a{
    width: 100%;
    height: 100%;
    display: flex;
    flex-flow: row wrap;
    justify-content:space-evenly;
    align-content: center;

}

.work-figure{
    height: 80%;
    position: absolute;
    top: 50%;
    left: 16%;
    transform: translate(-50%, -50%);
    width: 30%;
    display: flex;
}

.work-figure img{
    width: 400px;
}

.work aside{
    width: 46%;

}






@media screen and (min-width:500px) {
    figure {
        background: red;
    }
    
}

@media screen and (min-width:900px) {

    figure {
        background: yellow;
    }
}

